DBを別パッケージに、DB接続時のエラー処理の追加
[db.go]
- DBパッケージにし、importするように
- DB接続時にエラーが出た場合、エラーを返すように
- ログイン時のメールとパスワードでのユーザー認証への対応
- DB更新時等でのエラー発生時のエラーの対応の確認

[ssa_server]
- DBとの統合
